--- a/write-yourself-scheme.cabal
+++ b/write-yourself-scheme.cabal
@@ -26,6 +26,7 @@ executable write-yourself-scheme-exe
   build-depends:       base
                      , write-yourself-scheme
                      , parsec
+                     , mtl
   default-language:    Haskell2010
 
 test-suite write-yourself-scheme-test
