--- a/write-yourself-scheme.cabal
+++ b/write-yourself-scheme.cabal
@@ -16,7 +16,9 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base
+                     , parsec
+                     , mtl
   default-language:    Haskell2010
 
 executable write-yourself-scheme-exe
@@ -25,8 +27,6 @@ executable write-yourself-scheme-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , write-yourself-scheme
-                     , parsec
-                     , mtl
   default-language:    Haskell2010
 
 test-suite write-yourself-scheme-test
@@ -35,6 +35,8 @@ test-suite write-yourself-scheme-test
   main-is:             Spec.hs
   build-depends:       base
                      , write-yourself-scheme
+                     , hspec
+                     , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
