--- a/write-yourself-scheme.cabal
+++ b/write-yourself-scheme.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     Lib, Repl
   build-depends:       base
                      , parsec
                      , mtl
